--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <title>To-Do</title>
   <link rel="stylesheet" href="/style.css">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -39,7 +40,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path>
           </svg>
         </button>
-        <p class="m-auto text-xl font-medium">Todo App</p>
+        <p class="m-auto text-xl font-medium">Make Me To-Do</p>
       </nav>
       <div class="navbar-menu bg-gray-900 hidden">
         <p class="w-full text-2xl font-bold text-[#FFFFFF] my-[0.5rem] px-7">My Lists</p>
@@ -65,7 +66,7 @@
       </div>
       <main class="py-[2.5rem]">
         <div class="px-[1rem] sm:px-[1.5rem] lg:px-[2rem]">
-            <div class="relative h-[40rem] rounded-xl border-2" data-listViewer>
+            <div class="relative h-[40rem] rounded-xl border-2 listViewer" data-listViewer>
               <div class="w-full h-full listInnerViewer">
                 <div class="flex px-[1rem] rounded-t-lg justify-between bg-[#e0e0e0]">
                   <h2 class="my-auto text-xl font-semibold" data-listName></h2>
