--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
   <div class='w-screen h-screen flex'>
-    <div class='lg:w-1/5 w-0 h-[100vh] bg-gray-900 md:block hidden'>
+    <!-- <div class='lg:w-1/5 w-0 h-[100vh] bg-gray-900 md:block hidden'>
       <p class="w-full text-2xl font-bold text-[#FFFFFF] my-[0.5rem] px-7">My Lists</p>
       <nav>
         <ul class='list-disc w-full h-[44rem] ps-[2rem]
         overflow-y-auto' data-lists-dui></ul>
       </nav>
-      <form 
+      <form
         action="" 
         data-mainListForm-dui
         class="w-full px-5 mainListForm"
@@ -31,7 +31,7 @@
           >        
         </div>
       </form>
-    </div>
+    </div> -->
 
     <div class='lg:w-4/5 w-full'>
       <nav class='w-full h-[6%] border-b-2 flex'>
@@ -42,32 +42,34 @@
         </button>
         <p class="m-auto text-xl font-medium">Make Me To-Do</p>
       </nav>
-      <div class="navbar-menu bg-gray-900 hidden">
-        <p class="w-full text-2xl font-bold text-[#FFFFFF] my-[0.5rem] px-7">My Lists</p>
-        <nav>
-          <ul class='list-disc w-full h-[44rem] ps-[2rem]
-          overflow-y-auto' data-lists-mui></ul>
-        </nav>
-        <form 
-          action="" 
-          data-mainListForm-mui
-          class="w-full px-5 mainListForm"
-        >
-          <div class="flex fixed bottom-0">
-            <p class="text-2xl text-[#FFFFFF] my-auto">+</p>
-            <input 
-              type="text" 
-              data-addNewList-mui
-              class="h-[2rem] text-[#FFFFFF] border-0 border-b-2 border-[#ffffff77] bg-transparent my-[1rem] mx-[1.5rem] p-0 focus-visible:outline-none placeholder:text-[#ffffff77] addNewList"
-              id="addNewList"
-              placeholder="new list name"
-            >        
-          </div>
-        </form>
+      <div class="absolute navbar-menu bg-[#68686894] hidden w-full h-[94%] z-10">
+        <div class="w-[70%] h-full bg-gray-900">
+          <p class="w-full text-2xl font-bold text-[#FFFFFF] mb-[0.5rem] px-7">My Lists</p>
+          <nav class="h-[85%]">
+            <ul class='list-disc w-full h-full ps-[2rem]
+            overflow-y-auto' data-lists-mui></ul>
+          </nav>
+          <form 
+            action="" 
+            data-mainListForm-mui
+            class="w-full px-5 mt-3 mainListForm"
+          >
+            <div class="flex relative bottom-0">
+              <p class="text-2xl text-[#FFFFFF] my-auto">+</p>
+              <input 
+                type="text" 
+                data-addNewList-mui
+                class="h-[2rem] text-[#FFFFFF] border-0 border-b-2 border-[#ffffff77] bg-transparent my-[1rem] mx-[1.5rem] p-0 focus-visible:outline-none placeholder:text-[#ffffff77] addNewList"
+                id="addNewList"
+                placeholder="new list name"
+              >        
+            </div>
+          </form>
+        </div>
       </div>
-      <main class="py-[2.5rem]">
-        <div class="px-[1rem] sm:px-[1.5rem] lg:px-[2rem]">
-          <div class="relative h-[40rem] rounded-xl border-2 listViewer" data-listViewer>
+      <main class="h-[90%] py-[2.5rem]">
+        <div class="h-full px-[1rem] sm:px-[1.5rem] lg:px-[2rem]">
+          <div class="relative h-[90%] rounded-xl border-2 listViewer" data-listViewer>
             <div class="w-full h-full listInnerViewer">
               <div class="flex px-[1rem] rounded-t-lg justify-between bg-[#e0e0e0]">
                 <h2 class="my-auto text-xl font-semibold" data-listName></h2>
@@ -84,7 +86,7 @@
                 </form>
               </div>
             </div>
-            <div class="flex my-[1rem] justify-between">
+            <div class="flex mt-[3rem] justify-between">
               <button class="border-0 text-[#000000] cursor-pointer bg-transparent" data-clearTaskBtn>Clear Task</button>
               <button class="border-0 text-[#000000] cursor-pointer bg-transparent" data-deleteListBtn>Delete List</button>
             </div>
