--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       </form>
     </div> -->
 
-    <div class='lg:w-4/5 w-full'>
-      <nav class='w-full h-[6%] border-b-2 flex'>
+    <div class='lg:w-4/5 w-full h-full'>
+      <nav class='w-full h-[10%] border-b-2 flex'>
         <button type="button" class='navbar-burger p-[0.625rem] lg:hidden block'>
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="w-[1.5rem] h-[1.5rem]">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path>
@@ -42,7 +42,7 @@
         </button>
         <p class="m-auto text-xl font-medium">Make Me To-Do</p>
       </nav>
-      <div class="absolute navbar-menu bg-[#68686894] hidden w-full h-[94%] z-10">
+      <div class="absolute navbar-menu bg-[#68686894] hidden w-full h-[90%] z-10">
         <div class="w-[70%] h-full bg-gray-900">
           <p class="w-full text-2xl font-bold text-[#FFFFFF] mb-[0.5rem] px-7">My Lists</p>
           <nav class="h-[85%]">
@@ -59,7 +59,7 @@
               <input 
                 type="text" 
                 data-addNewList-mui
-                class="h-[2rem] text-[#FFFFFF] border-0 border-b-2 border-[#ffffff77] bg-transparent my-[1rem] mx-[1.5rem] p-0 focus-visible:outline-none placeholder:text-[#ffffff77] addNewList"
+                class="h-[2rem] text-[#FFFFFF] border-0 border-b-2 border-[#ffffff77] bg-transparent mx-[1.5rem] p-0 focus-visible:outline-none placeholder:text-[#ffffff77] addNewList"
                 id="addNewList"
                 placeholder="new list name"
               >        
