fixed few issues

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <div class="w-[70%] h-full bg-gray-900">
           <p class="w-full text-2xl font-bold text-[#FFFFFF] mb-[0.5rem] px-7">My Lists</p>
           <nav class="h-[85%]">
-            <ul class='list-disc w-full h-full ps-[2rem]
-            overflow-y-auto' data-lists-mui></ul>
+            <ul class='list-disc w-full h-full overflow-y-auto' data-lists-mui></ul>
           </nav>
           <form 
             action="" 
