--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="relative h-full rounded-xl border-2 listViewer" data-listViewer>
             <div class="w-full h-full listInnerViewer">
               <div class="flex px-[1rem] h-[12%] rounded-t-lg justify-between bg-[#e0e0e0]">
-                <h2 class="my-auto text-xl font-semibold truncate w-[16rem]" data-listName></h2>
+                <h2 class="my-auto text-xl font-semibold text-ellipsis overflow-hidden w-[16rem]" data-listName></h2>
                 <p class="my-[1rem] w-[5rem] text-center" data-listCount></p>
                 <!-- <button class="border-0 text-[#000000] cursor-pointer bg-transparent w-[1.5rem]" data-deleteListBtn>
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
