--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </button>
         <p class="m-auto text-xl font-medium">Make Me To-Do</p>
       </nav>
-      <div class="absolute navbar-menu bg-[#68686894] hidden w-full h-[100%] z-10">
+      <div class="absolute navbar-menu bg-[#68686894] hidden w-full h-screen z-10">
         <div class="w-[70%] h-full bg-gray-900">
           <p class="w-full text-2xl font-bold text-[#FFFFFF] mb-[0.5rem] px-7 py-[1rem]">My Lists</p>
           <nav class="h-[85%]">
