--- a/index.html
+++ b/index.html
@@ -21,15 +21,11 @@
       </nav>
       <div class="absolute navbar-menu bg-[#68686894] hidden w-full h-screen z-10">
         <div class="w-[70%] h-full bg-gray-900">
-          <p class="w-full text-2xl font-bold text-[#FFFFFF] mb-[0.5rem] px-7 py-[1rem]">My Lists</p>
-          <nav class="h-[85%]">
+          <p class="w-full text-2xl font-bold text-[#FFFFFF] h-[10%] px-7 py-[1rem]">My Lists</p>
+          <nav class="h-[80%]">
             <ul class='list-disc w-full h-full overflow-y-auto' data-lists-mui></ul>
           </nav>
-          <form 
-            action="" 
-            data-mainListForm-mui
-            class="w-full px-5 my-3 mainListForm"
-          >
+          <form action="" data-mainListForm-mui class="w-full px-5 h-[10%] mainListForm">
             <div class="flex relative bottom-0">
               <p class="text-2xl text-[#FFFFFF] my-auto">+</p>
               <input 
