--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <ul class='list-disc w-full h-full overflow-y-auto' data-lists-mui></ul>
           </nav>
           <form action="" data-mainListForm-mui class="w-full px-5 h-[10%] mainListForm">
-            <div class="flex relative bottom-0">
+            <div class="flex relative bottom-0 pe-[1rem]">
               <p class="text-2xl text-[#FFFFFF] my-auto">+</p>
               <input 
                 type="text" 
                 data-addNewList-mui
-                class="h-[2rem] text-[#FFFFFF] border-0 border-b-2 border-[#ffffff77] bg-transparent mx-[1.5rem] p-0 focus-visible:outline-none placeholder:text-[#ffffff77] addNewList"
+                class="h-[2rem] text-[#FFFFFF] border-0 border-b-2 border-[#ffffff77] w-full bg-transparent ms-[1rem] focus-visible:outline-none placeholder:text-[#ffffff77] addNewList"
                 id="addNewList"
                 placeholder="new list name"
               >        
