add delete task opt

--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
     </div>
 
     <template id="tempTask" class="">
-      <div class="relative p-[1rem] text-xl border-b-2">
+      <div class="relative p-[1rem] text-xl border-b-2 flex">
         <input type="checkbox" class="absolute opacity-0"/>
-        <label>
+        <label class="w-[90%]">
           <span class="custom-checkbox"></span>
         </label>
+        <button type="button" class="w-[10%] flex justify-center items-center deleteTaskBtn">D</button>
       </div>
     </template>
   </div>
