hide the delete opt in tasks

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     <template id="tempTask" class="">
       <div class="relative p-[1rem] text-xl border-b-2 flex">
         <input type="checkbox" class="absolute opacity-0"/>
-        <label class="w-[90%]">
+        <label class="w-[100%]">
           <span class="custom-checkbox"></span>
         </label>
-        <button type="button" class="w-[10%] flex justify-center items-center deleteTaskBtn">D</button>
+        <!-- <button type="button" class="w-[10%] flex justify-center items-center deleteTaskBtn">D</button> -->
       </div>
     </template>
   </div>
