--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <label class="w-[100%]">
           <span class="custom-checkbox"></span>
         </label>
-        <!-- <button type="button" class="w-[10%] flex justify-center items-center deleteTaskBtn">D</button> -->
+        <button type="button" class="w-[10%] flex justify-center items-center deleteTaskBtn">D</button>
       </div>
     </template>
   </div>
