--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 </div>
               </div>
               <div class="listViewerFooter h-[10%] border-0 border-t-2 border-t-[#4f54f977]">
-                <form action="" data-ListViewForm class="flex h-full">
-                  <p class="text-2xl text-[#0000ffa2] font-bold m-0 flex items-center" style="margin: 0 0 0 1.3rem;">+</p>
-                  <input type="text" data-addNewListView class="border-0 border-b-2 border-[#4f54f977] mx-[1.5rem] p-0 h-[3rem] text-[#0000ffa2] bg-transparent focus-visible:outline-none placeholder:text-[#4f54f977] listViewerFooterAddNewList" placeholder="new task name">
+                <form action="" data-ListViewForm class="flex w-full h-full">
+                  <p class="w-[2%] text-2xl text-[#0000ffa2] font-bold m-0 flex items-center" style="margin: 0 0 0 1.3rem;">+</p>
+                  <input type="text" data-addNewListView class="w-[98%] border-0 border-b-2 border-[#4f54f977] mx-[1.5rem] p-0 h-[3rem] text-[#0000ffa2] bg-transparent focus-visible:outline-none placeholder:text-[#4f54f977] listViewerFooterAddNewList" placeholder="new task name">
                 </form>
               </div>
             </div>
@@ -70,11 +70,13 @@
 
     <template id="tempTask" class="">
       <div class="relative p-[1rem] text-xl border-b-2 flex">
-        <input type="checkbox" class="absolute opacity-0"/>
-        <label class="w-[100%]">
-          <span class="custom-checkbox"></span>
-        </label>
-        <button type="button" class="w-[10%] flex justify-center items-center deleteTaskBtn">D</button>
+        <div class="inline-flex w-[90%]">
+          <input type="checkbox" class="absolute opacity-0"/>
+          <label class="w-[100%]">
+            <span class="custom-checkbox"></span>
+          </label>
+        </div>
+        <!-- <button type="button" class="w-[10%] flex justify-center items-center deleteTaskBtn">D</button> -->
       </div>
     </template>
   </div>
