--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <span class="custom-checkbox"></span>
           </label>
         </div>
-        <button type="button" class="w-[10%] flex justify-center items-center deleteTaskBtn">D</button>
+        <!-- <button type="button" class="w-[10%] flex justify-center items-center deleteTaskBtn">D</button> -->
       </div>
     </template>
   </div>
