--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 </head>
 <body>
   <div class='w-screen h-screen flex'>
-    <div class='lg:w-1/5 w-0 h-[100vh] bg-gray-900 md:block hidden'>
-      <p class="w-full text-2xl font-bold text-[#FFFFFF] my-[0.5rem] px-7">My Lists</p>
+    <div class='lg:w-1/5 w-full h-screen bg-gray-900 md:block hidden'>
+      <p class="w-full text-2xl font-bold text-[#FFFFFF] h-[10%] px-7 py-[1rem]">My Lists</p>
       <nav>
-        <ul class='list-disc w-full h-[44rem] ps-[2rem]
+        <ul class='list-disc w-full h-full
         overflow-y-auto' data-lists-dui></ul>
       </nav>
       <form 
         action="" 
         data-mainListForm-dui
-        class="w-full px-5 mainListForm"
+        class="flex justify-center items-center px-5 h-[10%] mainListForm"
       >
-        <div class="flex fixed bottom-0">
+        <div class="flex fixed bottom-0 pe-[1rem] w-[96%]">
           <p class="text-2xl text-[#FFFFFF] my-auto">+</p>
           <input 
             type="text" 
             data-addNewList-dui
-            class="h-[2rem] text-[#FFFFFF] border-0 border-b-2 border-[#ffffff77] bg-transparent my-[1rem] mx-[1.5rem] p-0 focus-visible:outline-none placeholder:text-[#ffffff77] addNewList"
+            class="h-[2rem] text-[#FFFFFF] border-0 border-b-2 border-[#ffffff77] w-full bg-transparent ms-[1rem] focus-visible:outline-none placeholder:text-[#ffffff77] addNewList"
             placeholder="new list name"
           >        
         </div>
@@ -34,40 +34,30 @@
     </div>
 
     <div class='lg:w-4/5 w-full'>
-      <nav class='w-full h-[6%] border-b-2 flex'>
+      <nav class='w-full h-[10%] border-b-2 flex'>
         <button type="button" class='navbar-burger p-[0.625rem] lg:hidden block'>
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="w-[1.5rem] h-[1.5rem]">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="w-[3rem] h-[2rem]">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path>
           </svg>
         </button>
-        <p class="m-auto text-xl font-medium">Make Me To-Do</p>
+        <p class="m-auto text-2xl font-medium">Make Me To-Do</p>
       </nav>
-      <div class="navbar-menu bg-gray-900 hidden">
-        <p class="w-full text-2xl font-bold text-[#FFFFFF] my-[0.5rem] px-7">My Lists</p>
-        <nav>
-          <ul class='list-disc w-full h-[44rem] ps-[2rem]
-          overflow-y-auto' data-lists-mui></ul>
+      <div class="absolute top-0 z-10 navbar-menu bg-gray-900 w-full h-full hidden">
+        <p class="w-full text-2xl font-bold text-[#FFFFFF] h-[10%] px-7 py-[1rem]">My Lists</p>
+        <nav class="h-[80%]">
+          <ul class='list-disc w-full h-full overflow-y-auto' data-lists-mui></ul>
         </nav>
-        <form 
-          action="" 
-          data-mainListForm-mui
-          class="w-full px-5 mainListForm"
-        >
-          <div class="flex fixed bottom-0">
+        <form action="" data-mainListForm-mui class="w-full px-5 h-[10%] mainListForm">
+          <div class="flex fixed bottom-0 pe-[1rem] mb-[1rem] w-[96%]">
             <p class="text-2xl text-[#FFFFFF] my-auto">+</p>
-            <input 
-              type="text" 
-              data-addNewList-mui
-              class="h-[2rem] text-[#FFFFFF] border-0 border-b-2 border-[#ffffff77] bg-transparent my-[1rem] mx-[1.5rem] p-0 focus-visible:outline-none placeholder:text-[#ffffff77] addNewList"
-              id="addNewList"
-              placeholder="new list name"
+            <input type="text" data-addNewList-mui class="h-[2rem] text-[#FFFFFF] border-0 border-b-2 border-[#ffffff77] w-full bg-transparent ms-[1rem] focus-visible:outline-none placeholder:text-[#ffffff77] addNewList" id="addNewList" placeholder="new list name"
             >        
           </div>
         </form>
       </div>
-      <main class="py-[2.5rem]">
-        <div class="px-[1rem] sm:px-[1.5rem] lg:px-[2rem]">
-          <div class="relative h-[40rem] rounded-xl border-2 listViewer" data-listViewer>
+      <main class="w-full h-[90%] py-[2.5rem]">
+        <div class="px-[1rem] h-full sm:px-[1.5rem] lg:px-[2rem]">
+          <div class="relative h-full rounded-xl border-2 listViewer" data-listViewer>
             <div class="w-full h-full listInnerViewer">
               <div class="flex px-[1rem] rounded-t-lg justify-between bg-[#e0e0e0]">
                 <h2 class="my-auto text-xl font-semibold" data-listName></h2>
@@ -77,17 +67,17 @@
                 <div class="w-full h-full overflow-y-auto" data-tasks>
                 </div>
               </div>
-              <div class="listViewerFooter">
-                <form action="" data-ListViewForm class="border-0 border-t-2 border-t-[#4f54f977]" style="display: flex;">
-                  <p class="text-2xl text-[#0000ffa2] font-bold m-0" style="margin: 0 0 0 1.3rem;">+</p>
-                  <input type="text" data-addNewListView class="border-0 border-b-2 border-[#4f54f977] mx-[1.5rem] p-0 h-[3rem] text-[#0000ffa2] bg-transparent focus-visible:outline-none placeholder:text-[#4f54f977] listViewerFooterAddNewList" placeholder="new task name">
+              <div class="listViewerFooter h-[10%] border-0 border-t-2 border-t-[#4f54f977]">
+                <form action="" data-ListViewForm class="flex w-full h-full">
+                  <p class="w-[2%] text-2xl text-[#0000ffa2] font-bold m-0 flex items-center" style="margin: 0 0 0 1.3rem;">+</p>
+                  <input type="text" data-addNewListView class="w-[98%] border-0 border-b-2 border-[#4f54f977] mx-[1.5rem] p-0 h-[3rem] text-[#0000ffa2] bg-transparent focus-visible:outline-none placeholder:text-[#4f54f977] listViewerFooterAddNewList" placeholder="new task name">
                 </form>
               </div>
             </div>
-            <div class="flex my-[1rem] justify-between">
+            <!-- <div class="flex my-[1rem] justify-between">
               <button class="border-0 text-[#000000] cursor-pointer bg-transparent" data-clearTaskBtn>Clear Task</button>
               <button class="border-0 text-[#000000] cursor-pointer bg-transparent" data-deleteListBtn>Delete List</button>
-            </div>
+            </div> -->
           </div>
         </div>
       </main>  
