hide data & time

--- a/index.html
+++ b/index.html
@@ -130,18 +130,18 @@
         </div>
         <div class="w-[15%] flex justify-center items-center">
           <div class="w-[80%] me-5">
-            <div>
+            <!-- <div>
               <p class="w-full text-base" data-display-date></p>
               <p class="w-full text-sm" data-display-time></p>
-            </div>
-            <div class="taskDateTimeContainer hidden">
+            </div> -->
+            <!-- <div class="taskDateTimeContainer hidden">
               <form action="" class="taskDateFrom">
                 <input type="text" class="w-full text-base taskDate border-2 rounded border-[#828282] px-2" placeholder="you can edit date" value="" data-display-date-inp>
               </form>
               <form class="taskTimeFrom">
                 <input type="text" class="w-full text-sm taskTime border-2 rounded border-[#828282] px-2" placeholder="you can edit time" value="" data-display-time-inp>
               </form>
-            </div>
+            </div> -->
           </div>
           <div class="w-[20%] flex justify-center items-center">
             <button class="saveChange hidden rounded px-2 border border-[#828282]">Save</button>
