delete opt enabled

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <button class="w-[1rem] h-[1rem] rounded-full bg-[#828282] dropbtn"></button>          
               <div id="myDropdown" class="dropdown-content">
                 <button class="text-left editTaskName">Edit</button>
-                <button type="button" class="deleteTaskBtn" disabled>Delete</button>
+                <button type="button" class="deleteTaskBtn">Delete</button>
               </div>
             </div>
           </div>
